--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -33,3 +33,8 @@ html[data-theme="light"] {
 html[data-theme="dark"] {
     --pst-color-primary: rgb(0, 174, 255);
 }
+
+/* The default font size is fairly small, so this increases it */
+body {
+    font-size: 1.3em
+}
